# tree_rewriter

./: .travis.yml  AGENTS.md  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  DESIGN.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: arithmetic_simplifier.py  boolean_algebra.py  calculus_advanced.py  calculus_differentiation.py  calculus_integration.py  cookbook.py  css_optimizer.py  pattern_matching.py
src/tree_rewriter/: __init__.py  cli.py  example_rules.py  tree_rewriter.py
src/treetransformer/: __init__.py  breadth_first_rewriter.py  breadth_first_walker.py  cli.py  postorder_rewriter.py  preorder_rewriter.py  rewrite_rules.py  tree_rewriter.py  tree_utils.py
tests/: __init__.py  test_rewrite.py  test_treetransformer.py
