[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_rewriter"
version = "0.1.0"
description = "A low-level tree rewriting library"
readme = "README.rst"
authors = [
  {name = "Alex Towell", email = "lex@metafunctor.com"}
]
maintainers = [
  {name = "Alex Towell", email = "lex@metafunctor.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/queelius/tree_rewriter/issues"
changelog = "https://github.com/queelius/tree_rewriter/blob/master/changelog.md"
homepage = "https://github.com/queelius/tree_rewriter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

