[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-rewriter"
version = "0.1.0"
description = "A minimal term rewriting system"
readme = "README.md"
authors = [
  {name = "Alex Towell", email = "lex@metafunctor.com"}
]
maintainers = [
  {name = "Alex Towell", email = "lex@metafunctor.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/queelius/tree_rewriter/issues"
changelog = "https://github.com/queelius/tree_rewriter/blob/master/changelog.md"
homepage = "https://github.com/queelius/tree_rewriter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

